fixed overlap on mobile

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -344,6 +344,7 @@ $background: #100e17;
     .bio {
         padding: 0 1em;
         margin: 0 1em;
+        margin-bottom: 8rem;
 
         .info {
             flex-direction: column;
